--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tiptap/extension-link": "^2.5.8",
     "@tiptap/extension-placeholder": "^2.5.8",
     "@tiptap/extension-text-align": "^2.5.8",
+    "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.5.8",
     "@tiptap/starter-kit": "^2.5.8",
     "autosuggest-highlight": "^3.3.4",
